z-index navbar fix

--- a/Sports/src/app/navbar/navbar.component.css
+++ b/Sports/src/app/navbar/navbar.component.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 body {
-    font-family: "Helvetica Neue",sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
     font-weight: lighter;
 }
 
@@ -41,6 +41,7 @@ nav.home {
     position: fixed;
     width: 100%;
     line-height: 60px;
+    z-index: 1;
 }
 
 nav ul {
@@ -84,37 +85,30 @@ nav ul li a {
 }
 
 @media(max-width: 786px) {
-
     .logo {
-          position: fixed;
-          top: 0;
-          margin-top: 16px;
+        position: fixed;
+        top: 0;
+        margin-top: 16px;
     }
-
     nav ul {
-          max-height: 0px;
-          background: #000;
+        max-height: 0px;
+        background: #000;
     }
-
     nav.black ul {
-          background: #000;
+        background: #000;
     }
-
     .showing {
-          max-height: 34em;
+        max-height: 34em;
     }
-
     nav ul li {
-          box-sizing: border-box;
-          width: 100%;
-          padding: 24px;
-          text-align: center;
+        box-sizing: border-box;
+        width: 100%;
+        padding: 24px;
+        text-align: center;
     }
-
     .menu-icon {
-          display: block;
+        display: block;
     }
-
 }
 
 /* .insite {
@@ -135,8 +129,7 @@ nav.insite {
     line-height: 60px;
     position: fixed;
     background: #000;
-    opacity: 0.8;
-    text-shadow:2px 2px black;
+    text-shadow: 2px 2px black;
 }
 
 header.insite {
